--- a/behave_django_autodoc/assets/feature.html
+++ b/behave_django_autodoc/assets/feature.html
@@ -1,4 +1,4 @@
-<h2 class="feature-tittle"> {{feature.tittle}} </h2>
+<h2 class="feature-title"> {{feature.title}} </h2>
 <div class="row">
     <div class="col-8">
         <p class="feature-description">{{feature.description}}</p>
