--- a/behave_django_autodoc/assets/scenario.html
+++ b/behave_django_autodoc/assets/scenario.html
@@ -1,4 +1,4 @@
-<h3 class="scenario-tittle"> {{scenario.tittle}} </h3>
+<h3 class="scenario-title"> {{scenario.title}} </h3>
 <div class="row">
     <div class="col-8">
         <p class="scenario-description">{{scenario.description}}</p>
